tests/error/type_match/base_case_array_to_slice_const_propagation1.bz
// error: unable to match expression of type '[32: i32]' to mutable array slice type '[: mut i32]'
function test()
{
	let arr = [32: i32]();
	let _: [: mut i32] = arr;
}
